# uav_simulator

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/: dashboard.py  main.py
src/control/: autopilot.py  mission.py
src/models/: dynamics.py  propulsion.py  sensorsuite.py
src/utils/: atmosphere.py
tests/: test_atmosphere.py  test_autopilot.py  test_dynamics.py  test_mission.py  test_sensorsuite.py
